--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.2/dist/tailwind.min.css" rel="stylesheet"> -->
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class ='header'>
+        <h1>Tic Tac Toe</h1>
+    </div>
+    <div class="buttons">
+        <button>Reset</button>
+    </div>
+    <div class="players">
+        <p>Player 1: </p>
+        <p class="pName" id="p1"></p>
+        <p>Player 2: </p>
+        <p class="pName" id="p2"></p>
+    </div>
+    <div class="board">
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
