Create user name inputs

--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
         <h1>Tic Tac Toe</h1>
     </div>
     <div class="buttons">
-        <button>Reset</button>
+        <button id="start-button">Start Game</button>
+        <button id="reset-button">Reset</button>
     </div>
     <div class="players">
-        <p>Player 1: </p>
-        <p class="pName" id="p1"></p>
-        <p>Player 2: </p>
-        <p class="pName" id="p2"></p>
+        <label for="p1">Player 1 Name</label>
+        <input class="pName" id="p1" type="text">
+        <label>Player 2 Name </label>
+        <input class="pName" id="p2" type="text"></p>
     </div>
     <div class="board">
     </div>
