Created game state object, moved all functions as methods

--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
         <button id="reset-button">Reset</button>
     </div>
     <div class="players">
-        <label for="p1">Player 1 Name</label>
-        <input class="pName" id="p1" type="text">
-        <label>Player 2 Name </label>
-        <input class="pName" id="p2" type="text"></p>
+        <div class="p1">
+            <label for="p1">Player 1 Name</label>
+            <input class="pName" id="p1" type="text">
+        </div>
+        <div class="p2">
+            <label>Player 2 Name </label>
+            <input class="pName" id="p2" type="text"></p>
+        </div>
     </div>
     <div class="board">
     </div>
